SERVER-40615: Only get flow-control tickets when the client was previously inactive.